[#1] feat: 주문 생성 기능 (#4)
* init: Order Service project structure

- Spring Boot 설정 파일 추가
  - application.yml, application-local.yml
- Gradle 빌드 설정 파일 추가
  - build.gradle, settings.gradle
  - gradle wrapper 관련 파일
- Git 설정 파일 추가
  - .gitattributes, .gitignore
- 메인/테스트 클래스 추가
  - OrderServiceApplication.java
  - OrderServiceApplicationTests.java

* feat: Add common API response structure and exception handling

- API 응답 공통 클래스 구현
  - ApiResponse, ApiResponseUtils
  - ResponseWrapper, ErrorResponse
  - GlobalException
- HTTP 메시지 컨버터 추가

* Refactor: Rename GlobalException to GlobalExceptionHandler

- "Exception"으로 끝나는 클래스는 Exception을 상속해야 한다는 SonarQube 이슈 해결
- 예외 처리기로서의 목적을 더 잘 반영하도록 클래스 이름 개선
- ResponseEntityExceptionHandler를 상속하도록 클래스 선언 수정

* test: Add successful order creation test case

- Post api/v1/orders
- 주문 생성 성공 케이스 생성
- 설정 파일

* test: Add successful order creation e2e test case

* feat: Add order presentation layer components

- CreateOrderUseCase 추가
- OrderController 및 관련 Request/Response 클래스 구현
- 주문 생성 관련 프레젠테이션 레이어 구성

* feat: Add JPA attribute converters for order enums

- 주문 도메인의 enum 타입을 데이터베이스 컬럼과 매핑하기 위한 JPA 컨버터를 추가
  - OrderDeliveryConverter: 주문 배송 상태 enum을 데이터베이스 문자열 컬럼으로 변환
  - OrderStatusConverter: 주문 상태 enum을 데이터베이스 문자열 컬럼으로 변환

* feat: Add order domain entities and repository implementation

- 주문 도메인의 엔티티와 레포지토리를 추가

* feat: Add order and receiver domain entities

- 주문과 수령자 도메인 엔티티를 추가했습니다.
- Order, OrderDelivery, Orderer 클래스와 ReceiverAddress, ReceiverInfo 클래스를 구현해 주문 도메인의 핵심 엔티티를 구성했습니다.

* feat: Add order and receiver mappers

- 주문 도메인의 매퍼 클래스들을 추가
- OrderMapper, OrderItemMapper 클래스를 구현해 주문과 주문상품의 데이터 변환을 담당하도록 했습니다.
- 이를 통해 도메인 객체와 DTO 간의 안정적인 데이터 매핑이 가능

* feat: Add delivery and order status enums

- 주문 서비스의 도메인 계층에 배송사 코드와 주문/배송 상태를 관리하기 위한 열거형 타입들을 추가

* feat: Implement order service structure with DTOs and commands

- application
  - CreateOrderCommand.java로 주문 생성 커맨드를 정의
  - OrderItemDto.java에는 주문 아이템 정보를 담을 수 있음
    - port
      - Order